@@ -95,9 +95,7 @@ struct areahdr
   Word baseaddr;
 };
 
-/*
- * area attributes
- */
+/* Area attributes.  */
 #define AREA_ABS		0x00000100
 #define AREA_CODE		0x00000200
 #define AREA_COMMONDEF		0x00000400	/* Common block definition */
@@ -124,6 +122,48 @@ struct areahdr
 #define AREA_SOFTFLOAT		0x80000000	/* Avoids FP instructions (GCCSDK extension) Normally reserved bit. */
 
 #define AREA_UNKNOWNBITS	0x60E00000
+
+/* Symbol attributes.  */
+#define SYMBOL_LOCAL     0x0001	/* Defined with local scope */
+#define SYMBOL_REFERENCE 0x0002 /* E.g. IMPORT symbol, or undefined EXPORT symbol.  */
+#define SYMBOL_GLOBAL    0x0003	/* Defined with global scope.  E.g. defined EXPORT symbol.  */
+
+#define SYMBOL_KIND(x)   ((x) & 0x0003) /* Returns: 0 (area symbol (SYMBOL_AREA is set) or symbols which are not marked as imported nor exported), SYMBOL_LOCAL, SYMBOL_REFERENCE or SYMBOL_GLOBAL.  */
+
+#define SYMBOL_DEFINED   0x0001 /* This is a mask.  */
+#define SYMBOL_EXPORT    0x0002 /* This is a mask.  */
+
+#define SYMBOL_ABSOLUTE  0x0004	/* This is an absolute value (e.g. constant) and only valid when SYMBOL_DEFINED is set.  Otherwise its value is relative to the base AREA where it is defined. */
+#define SYMBOL_NOCASE    0x0008	/* Only if SYMBOL_REFERENCE, case insensitive */
+#define SYMBOL_WEAK      0x0010	/* Only if SYMBOL_REFERENCE, must not be resolved (AOF).  For ELF, can be on SYMBOL_LOCAL/SYMBOL_GLOBAL.  */
+#define SYMBOL_STRONG    0x0020	/* Only if SYMBOL_GLOBAL.  This attribute 
+  only has meaning if there is a non-strong, external definition of the same 
+  symbol in another object file. In this case, references to the symbol from 
+  outside of the file containing the strong definition, resolve to the strong 
+  definition, while those within the file containing the strong definition 
+  resolve to the non-strong definition.  */
+#define SYMBOL_COMMON    0x0040 /* Only if SYMBOL_REFERENCE.  If set, the
+  symbol is a reference to a common area with the symbol's name. The length of
+  the common area is given by the symbol's <Value> field (see above).  */
+
+#define SYMBOL_DATUM     0x0100	/* Set for data symbol defined in code area.  */
+#define SYMBOL_FPREGARGS 0x0200	/* FP args in FP regs attribute, for code symbols only.  */
+#define SYMBOL_USESSB    0x0400
+#define SYMBOL_LEAF      0x0800	/* Leaf function, for code symbol only.  */
+#define SYMBOL_THUMB     0x1000	/* Identifies Thumb code, instead of ARM code. For code symbol only.  */
+
+/* New since DDE Rel 21:
+
+   Symbol attribute bit 13 is meaningful only for function entry point
+   symbols in code areas (or for absolute function entry point symbols).
+   It declares that the function not only receives its floating point
+   arguments in integer registers, but also returns any floating point
+   return value in integer registers. A symbolic reference with this
+   attribute cannot be matched by the linker to a symbol definition which
+   lacks the attribute.  */
+#define SYMBOL_SOFTFP    0x2000
+
+#define SYMBOL_SUPPORTED_AOF_BITS 0x3F7F /** Mask for the symbol bits which are AOF defined symbols bits and can be passed on in the AOF output file.  */
 
 struct reloc
 {
